--- a/Sticky Nav/style-START.css
+++ b/Sticky Nav/style-START.css
@@ -47,7 +47,7 @@ nav {
   position: relative;
   z-index: 1;
 }
-.fixed-nav {
+.fixed-nav nav {
     position: fixed;
     box-shadow: 0 5px rgba(0,0,0, 0.1);
 }
