--- a/Sticky Nav/style-START.css
+++ b/Sticky Nav/style-START.css
@@ -84,6 +84,10 @@ li.logo a {
     max-width: 500px;
 }
 
+.fixed-nav site-wrap {
+    transform: scale(1);
+}
+
 nav a {
   text-decoration: none;
   padding:20px;
